# pdf-notebooklm-cleaner

./: LICENSE  README.md  pyproject.toml  test_cli.py
.github/workflows/: publish.yml
src/pdf_notebooklm_cleaner/: cli.py
